fix(header): resolve mobile responsiveness and overflow of the name badge

--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -61,16 +61,38 @@
 
   .badge-cmp,
   .tag-cmp {
-    padding: 1rem 2rem;
     background: var(--white-color);
     border-radius: 15px;
     flex-direction: row;
     width: auto;
-
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
   }
 
+  .badge-cmp {
+    padding: 1.5rem 2.5rem;
+
+    h1 {
+      font-size: 2.75rem;
+      font-weight: 800;
+      text-align: left;
+
+      @media screen and (max-width: 450px) {
+        font-size: 1.75rem;
+        line-height: 1.25;
+      }
+
+      @media screen and (max-width: 320px) {
+        font-size: 1.5rem;
+      }
+    }
+
+    @media screen and (max-width: 450px) {
+      padding: 1rem 1.5rem;
+    }
+  }
+
   .tag-cmp {
+    padding: 1rem 2rem;
     flex-direction: column;
     margin-top: 3rem;
 
@@ -78,6 +100,19 @@
       width: 100%;
       text-transform: uppercase;
       text-align: right;
+
+      @media screen and (max-width: 1200px) {
+        text-align: left;
+      }
+
+      @media screen and (max-width: 450px) {
+        font-size: 0.75rem;
+      }
+    }
+
+    @media screen and (max-width: 450px) {
+      padding: 0.75rem 1.25rem;
+      margin-top: 1.5rem;
     }
   }
 
